--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -2,12 +2,12 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
-    "outDir": "../../../panch-backend/backend/dist",
-    "rootDir": "../../../panch-backend/backend/src",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
   },
-  "include": ["../../../panch-backend/backend/src"],
-  "exclude": ["../../../panch-backend/backend/node_modules"]
+  "include": ["src"],
+  "exclude": ["node_modules"]
 }
